# gitover-rust-tui

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  build.rs  create-sandbox-repos.sh  loc.sh
.github/: dependabot.yml
docs/: config.schema.json  features.md  state.schema.json  todo.md
src/: app.rs  config.rs  git.rs  lib.rs  main.rs  ops.rs  state.rs  theme.rs  ui.rs  ui_additions.rs  utils.rs  watcher.rs
tests/: config_tests.rs  git_tests.rs
