[package]
name = "gitover"
version = "0.7.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "gitover"
path = "src/main.rs"

[lib]
name = "gitover"
path = "src/lib.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
git2 = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
notify = "6"
serde_yaml = "0.9"
ratatui-explorer = { version = "0.3", features = ["crossterm"] }
chrono = "0.4.44"
arboard = "3"

[dev-dependencies]
tempfile = "3"
